--- a/CSS/about.css
+++ b/CSS/about.css
@@ -421,7 +421,7 @@ ul li {
 .popup button {
     max-width: 30px;
     height: 30px;
-    position: fixed;
+    position: sticky;
     font-size: 30px;
     display: flex;
     justify-content: center;
@@ -429,6 +429,11 @@ ul li {
     top: 5px;
     right: 5px;
     cursor: pointer;
+}
+
+.popup button:hover {
+    background: red;
+    color: #fff;
 }
 
 .child1,
