--- a/CSS/about.css
+++ b/CSS/about.css
@@ -399,16 +399,19 @@ ul li {
 .popup p {
     font-size: 1.2em;
     padding: 15px;
+    transition: 0.5s;
     text-align: justify;
 }
 
 .popup h1 {
     text-align: center;
+    transition: 0.5s;
     font-size: 25px;
     color: #e90c0c;
 }
 
 .popup h4 {
+    transition: 0.5s;
     text-align: center;
     color: #e90c0c;
 }
@@ -418,19 +421,20 @@ ul li {
     padding: 20px;
     list-style: block;
     transition: 0.5s;
+    transition: 0.5s;
 }
 
 .popup button {
-    position: relative;
     max-width: 30px;
+    transition: 0.5s;
     height: 30px;
-    position: sticky;
+    position: fixed;
     font-size: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    top: 5px;
-    right: 5px;
+    top: 8px;
+    right: 8px;
     cursor: pointer;
     outline: none;
     border: none;
